app/css/lineChart.css
.chart-wrapper {
    margin: 0 auto;
    background-color: #FAF7F7;
}

.chart-wrapper .inner-wrapper {
    position: relative;
    padding-bottom: 50%;
    width: 100%;
}

.chart-wrapper .outer-box {
    position: absolute;
    top: 0; bottom: 0; left: 0; right: 0;
}

.chart-wrapper .inner-box {
    width: 100%;
    height: 100%;
}

.chart-wrapper text {
  font-family: sans-serif;
  font-size: 11px;
}

.chart-wrapper p {
    font-size: 16px;
    margin-top:5px;
    margin-bottom: 40px;
}

.chart-wrapper .axis path,
.chart-wrapper .axis line {
    fill: none;
    stroke: #1F1F2E;
    stroke-opacity: 0.7;
    shape-rendering: crispEdges;

}
.chart-wrapper .axis path {
  stroke-width: 2px;
}

.chart-wrapper .line {
  fill: none;
  stroke: steelblue;
  stroke-width: 5px;
}

.legend  {
    min-width: 200px;
    /* display: flex;
    justify-content: flex-start; */
    /* flex-wrap: wrap; */
    font-size: 16px;
}
.legend-button {
    display: block;
}
.legend > div {
    margin: 0px 25px 10px 0px;
    flex-grow: 0;
    cursor: pointer;
}
.legend .series-marker:hover {
    opacity: 0.8;
}
.legend p {
    display:inline-block;
    font-size: 0.8em;
    font-family: sans-serif;
    font-weight: 600;
}
.legend .series-marker {
    height: 1em;
    width: 1em;
    border-radius: 35%;
    background-color: crimson;
    display: inline-block;
    margin-right: 4px;
    margin-bottom: -0.16rem;
}

.chart-wrapper .overlay {
  fill: none;
  pointer-events: all;
}

.chart-wrapper .tool circle {
  fill: black;
  stroke: crimson;
  stroke-width: 2px;
  fill-opacity: 25%;
}
.chart-wrapper .tool rect {
    fill: #ecf0f4;
    opacity: 0.7;
    border-radius: 2px;
}
.chart-wrapper .tool text {
    font-size: 14px;
    z-index: 999;
}
.chart-wrapper .tool .line {
    stroke: steelblue;
    stroke-dasharray: 2,5;
    stroke-width: 2;
    opacity: 0.5;
}

@media (max-width:500px){
    .chart-wrapper .line {stroke-width: 3px;}
    .chart-wrapper .legend {font-size: 14px;}
}

